--- a/public/content/chat.html
+++ b/public/content/chat.html
@@ -353,6 +353,9 @@
                     $('#chatName').text(chatroomName);
                     $('#chatroom_icon').attr('src', '../images/' + icon);
                     if(content.length > 0){
+                        //Reverse the data in messages array to display
+                        data.content[0].messages.reverse();
+
                         for(var value of content){
                             html = '';
                             var senderStyle = (userID.toString() === value.sender)? 'right' : 'left';
@@ -471,7 +474,8 @@
                 //Load more messages
                 if(currentPage !== -1){
                     var data = {
-                        currentChatID: currentChatroom
+                        currentChatID: currentChatroom,
+                        page: currentPage
                     }
 
                     $.ajax
@@ -483,8 +487,7 @@
                         async: false,
                         data: JSON.stringify(data),
                         headers: {
-                            "authorization": "Bearer " + getCookie('chatJWT'),
-                            page: currentPage
+                            "authorization": "Bearer " + getCookie('chatJWT')
                         },
                         //if conversation/chatroom not found
                         error:function(data){
